--- a/xbmc/windowing/egl/Makefile.in
+++ b/xbmc/windowing/egl/Makefile.in
@@ -6,6 +6,7 @@ ifeq (@USE_ANDROID@,1)
 SRCS+= EGLNativeTypeAndroid.cpp
 SRCS+= EGLNativeTypeAmlAndroid.cpp
 SRCS+= EGLNativeTypeRKAndroid.cpp
+SRCS+= EGLNativeTypeRockchip.cpp
 endif
 ifeq (@USE_MMAL@,1)
 SRCS+= EGLNativeTypeRaspberryPI.cpp
