DVDDemuxFFmpegRK is almost ready! A MVC & SSIF Support Demuxer. And when speed fast only filter key frame.

--- a/xbmc/cores/dvdplayer/Makefile.in
+++ b/xbmc/cores/dvdplayer/Makefile.in
@@ -20,6 +20,7 @@ SRCS += Edl.cpp
 
 SRCS += DVDExComponentsRK/DVDPlayerVideoRK.cpp 
 SRCS += DVDExComponentsRK/DVDVideoCodecRK.cpp
+SRCS += DVDExComponentsRK/DVDDemuxFFmpegRK.cpp
 SRCS += DVDExComponentsRK/RKCoreComponent.cpp
 
 LIB = DVDPlayer.a
